tests/core/snapshots/graphql-conformance-019.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type NodeA {
  name: String
  nodeB: NodeB
  nodeC: NodeC
}

type NodeB {
  name: String
  nodeA: NodeA
  nodeC: NodeC
}

type NodeC {
  name: String
  nodeA: NodeA
  nodeB: NodeB
}

type Query {
  queryNodeA: NodeA
}

schema {
  query: Query
}
