tests/core/snapshots/graphql-conformance-020.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "queryNodeA": [
        {
          "name": "nodeA",
          "nodeA_id": "nodeA_id",
          "nodeB": {
            "name": "NodeB",
            "nodeB_id": "nodeB_id"
          }
        }
      ]
    }
  }
}
