tests/core/snapshots/graphql-conformance-020.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type NodeA {
  name: String
  nodeA_id: String
  nodeB(nodeB_id: String): NodeB
}

type NodeB {
  name: String
  nodeB_id: String
}

type Query {
  queryNodeA: [NodeA!] @graphQL(url: "http://upstream/graphql", name: "nodeA")
  queryNodeB: [NodeB!] @graphQL(url: "http://upstream/graphql", name: "nodeB")
}
