tests/core/snapshots/graphql-conformance-http-001.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "city": "Globe",
        "name": "Tailcall",
        "id": 4
      }
    }
  }
}
