tests/core/snapshots/graphql-conformance-http-001.md_3.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": " --> 3:1\n  |\n3 | \n  | ^---\n  |\n  = expected selection_set, selection, or directive",
        "locations": [
          {
            "line": 3,
            "column": 1
          }
        ]
      }
    ]
  }
}
