tests/core/snapshots/graphql-conformance-http-001.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
snapshot_kind: text
---
type Query {
  user(id: ID!): User!
}

type User {
  city: String
  id: ID!
  name: String!
}

schema {
  query: Query
}
